// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and migrate cross-cloud workloads to Azure with migration reports and code conversion. Supports AWS Lambda→Functions, Fargate→Container Apps, Cloud Run→Container Apps. WHEN: migrate Lambda to Azure Functions, migrate AWS to Azure, Lambda migration assessment, convert serverless to Azure, migration readiness report, migrate from AWS, migrate from GCP, Cloud Run to Container Apps, Fargate to Container Apps, ECS to Container Apps.",
  "extractedKeywords": [
    "apps",
    "assess",
    "assessment",
    "azure",
    "cloud",
    "code",
    "container",
    "conversion",
    "convert",
    "cross-cloud",
    "deploy",
    "fargate",
    "from",
    "function",
    "functions",
    "lambda",
    "mcp",
    "migrate",
    "migration",
    "readiness",
    "report",
    "reports",
    "serverless",
    "supports",
    "when",
    "with",
    "workloads",
  ],
  "name": "azure-cloud-migrate",
}
`;

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "apps",
  "assess",
  "assessment",
  "azure",
  "cloud",
  "code",
  "container",
  "conversion",
  "convert",
  "cross-cloud",
  "deploy",
  "fargate",
  "from",
  "function",
  "functions",
  "lambda",
  "mcp",
  "migrate",
  "migration",
  "readiness",
  "report",
  "reports",
  "serverless",
  "supports",
  "when",
  "with",
  "workloads",
]
`;
